# rust_blog

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  blog.db  blog_config.toml  docker-compose.yml  wrangler.toml
.devcontainer/: devcontainer.json
.github/workflows/: cargo_test.yml  release_build.yml  static_export.yml
content/articles/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
content/config/: category_slug.toml  common.toml  slug.toml  tag_slug.toml
content/fixed_contents/: about.md
core/: Cargo.toml
core/assets/: nav.js  site.css
core/src/: domain.rs  entity_extension.rs  entity_trait.rs  lib.rs  main.rs  repository.rs  route.rs  seed.rs  slug_config.rs  static_site.rs  utils.rs  view.rs
core/src/domain/: page.rs  query.rs
core/src/domain/query/: category.rs  index.rs  tag.rs
core/src/entity/: article.rs  article_category.rs  article_tag.rs  category.rs  fixed_content.rs  mod.rs  prelude.rs  tag.rs
core/src/entity_extension/: article.rs  category.rs  fixed_content.rs  tag.rs
core/src/entity_trait/: name_slug_entity.rs  name_slug_model.rs
core/src/repository/: article.rs  category.rs  fixed_content.rs  tag.rs
core/src/route/: get.rs
core/src/route/get/: about.rs  article.rs  category.rs  error.rs  error_404.rs  fixed_component.rs  fixed_content.rs  index.rs  static_asset.rs  tag.rs
core/src/route/get/error/: bad_gateway.rs  bad_request.rs  forbidden.rs  gateway_timeout.rs  internal_server_error.rs  not_found.rs  request_timeout.rs  service_unavailable.rs  unauthorized.rs
core/src/seed/: article.rs  blog_component.rs  config.rs  fixed_content.rs  markdown.rs  tag_toml.rs
core/src/seed/article/: seed.rs
core/src/seed/config/: env.rs  seeder.rs
core/src/utils/: config.rs  fixed_content_matter.rs  front_matter.rs  markdown.rs
core/src/utils/markdown/: to_text.rs
core/src/view/: category.rs  tag.rs
docker/: dev-entrypoint.sh  nginx-static.conf
docs/: cloudflare.md  dual-output-architecture.md  export-bundle-usage.md  testing.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250706_065150_create_article_table.rs  m20250706_065150_create_articles_table.rs  (+6 more)
prod/: Dockerfile  entrypoint.sh
src/: main.rs
src/entity/: article.rs  (+6 more)
templates/: 400.html.tera  401.html.tera  403.html.tera  404.html.tera  408.html.tera  500.html.tera  502.html.tera  503.html.tera  504.html.tera  about.html.tera  article_detail.html.tera  base.html.tera  categories.html.tera  category.html.tera  detail.html.tera  index.html.tera  tag.html.tera  tags.html.tera
(+7 files in other folders)
