[package]
resolver = "3"
name = "rust_blog"
version = "0.1.0"
edition = "2024"
default-run = "rust_blog"

[[bin]]
path = "src/bin/seed.rs"
name = "seed"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
pulldown-cmark = "0.9"
sea-orm-rocket = "0.5.5"
anyhow = "1.0.98"
askama = "0.14.0"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
chrono = "0.4.41"
toml = "0.9.8"
dotenvy = "0.15.7"
taplo = { version = "0.14.0", features = ["serde"] }
chrono-tz = "0.10.4"
